modifique estilos y parrafo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h1>Santa Cruz de la Sierra</h1>
     <p> tierra camba con hermosa mujeres</p>
     <p> Plaza 24 de Septiembre</p>
-    <p> Uagrm</p>
+    <p> Q'allta</p>
 </section>
 
 
