--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 <h1>Santa Cruz de la Sierra</h1>
     <p> tierra camba con hermosa mujeres</p>
     <p> Plaza 24 de Septiembre</p>
-<<<<<<< HEAD
     <p> Q'allta</p>
-=======
-    <p> Uagrm</p>
->>>>>>> prueba
+    <p> Github</p>
+    <p> probando huebas</p>
 </section>
 
 
